kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: devanshnanani/virtualizationmidterm_frontend:latest
        ports:
        - containerPort: 3001
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        #livenessProbe:
        #  httpGet:
        #    path: /health
        #    port: 3001
        #  initialDelaySeconds: 10
        #  periodSeconds: 5
        #readinessProbe:
        #  httpGet:
        #    path: /health
        #    port: 3001
        #  initialDelaySeconds: 5
        #  periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
